lesson 4 notes